modified:   50/.vscode/settings.json 	modified:   50/Tasks/Task_19.cpp 	modified:   50/Tasks/Task_20.cpp

--- a/50/.vscode/settings.json
+++ b/50/.vscode/settings.json
@@ -60,6 +60,7 @@
     "iostream": "cpp",
     "ostream": "cpp",
     "system_error": "cpp",
-    "*.tcc": "cpp"
+    "*.tcc": "cpp",
+    "cmath": "cpp"
   }
 }
